Fix too wide form row

--- a/viite-UI/src/less/core/forms.less
+++ b/viite-UI/src/less/core/forms.less
@@ -127,7 +127,7 @@ input[type="checkbox"]:focus {
 
 // Wider form section to accomodate EVK addition
 .form-group.new-road-address{
-  width: 440px;
+  width: 380px;
 }
 
 .form-group-metadata{
